# anypoc

./: .dockerignore  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.md  setup_dev.md
.github/workflows/: lint.yml
.opencode/plans/: windows-support-plan.md
oss-projects/aptos-core-move/: Dockerfile  paths.md
oss-projects/aptos-core-move/prompts/: analysis.md  evidence.md  poc_gen.md
oss-projects/chromium/: Dockerfile  paths.md
oss-projects/chromium/prompts/: poc_gen.md
oss-projects/ffmpeg/: Dockerfile  paths.md
oss-projects/firefox/: Dockerfile  paths.md
oss-projects/firefox-js/: Dockerfile  paths.md
oss-projects/firefox-js/prompts/: analysis.md  bug_report_format.md  evidence.md  poc_gen.md
oss-projects/firefox/prompts/: analysis.md  evidence.md  poc_gen.md
oss-projects/freetype/: Dockerfile  paths.md
oss-projects/freetype/prompts/: analysis.md  bug_report_format.md  evidence.md  poc_gen.md
oss-projects/hermes/: Dockerfile  paths.md
oss-projects/hermes/prompts/: analysis.md  evidence.md  poc_gen.md
oss-projects/linux/: Dockerfile  paths.md
oss-projects/linux/prompts/: analysis.md  evidence.md  poc_gen.md
oss-projects/llvm-project/: Dockerfile  paths.md
oss-projects/memcached/: Dockerfile  paths.md
oss-projects/openssl/: Dockerfile  paths.md
oss-projects/quickjs/: Dockerfile  paths.md
oss-projects/redis/: Dockerfile  paths.md
oss-projects/sqlite/: Dockerfile  paths.md
oss-projects/v8/: Dockerfile  paths.md
oss-projects/wasmtime/: Dockerfile  paths.md
src/anypoc/: __init__.py  cli.py  project.py  types.py
src/dashboard/: __init__.py  api.py  models.json
src/scanner/: __init__.py  _frontmatter.py  backpressure.py  cli.py  registry.py  runner.py  types.py
src/skills/: __init__.py
(+76 files in other folders)
